[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prepx"
version = "0.1.0"
description = "One-line DataFrame cleaning and EDA for pandas."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest"]