[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prepx"
version = "2.0.0"
description = "One-line DataFrame cleaning and EDA for pandas with advanced outlier detection, imputation, and drift analysis."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "prepx Contributors"},
]
keywords = ["pandas", "data-cleaning", "eda", "outliers", "imputation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
]

[project.optional-dependencies]
advanced = [
    "scikit-learn>=1.3",
    "scipy>=1.11",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
plotting = [
    "plotly>=5.0",
    "kaleido>=0.2",
]
full = [
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "plotly>=5.0",
    "kaleido>=0.2",
    "umap-learn>=0.5",
    "rapidfuzz>=3.0",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/anomalyco/prepx"
Repository = "https://github.com/anomalyco/prepx"

[tool.setuptools.packages.find]
where = ["."]
include = ["prepx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]